--- a/buyer-shop-grid.html
+++ b/buyer-shop-grid.html
@@ -52,7 +52,7 @@
                                     View all
                                     <i class="fa-solid fa-angle-down text-color5 ms-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                                 </a>
-                                <div class="mega_menu absolute columns-3 gap-[40px] bg-[#F7F7F5] p-[60px] pb-[20px] shadow-[0_4px_4px_0px_#00000040] xl:w-[970px] lg:w-[770px] md:w-[570px] w-full md:max-h-[unset] max-h-[400px] overflow-y-auto left-0 right-0 top-[calc(100%+12px)] z-[3] hidden">
+                                <div class="mega_menu absolute sm:columns-3 gap-[40px] bg-[#F7F7F5] p-[60px] pb-[20px] shadow-[0_4px_4px_0px_#00000040] xl:w-[970px] lg:w-[770px] md:w-[570px] w-full md:max-h-[unset] max-h-[400px] overflow-y-auto left-0 right-0 top-[calc(100%+12px)] z-[3] hidden">
                                     <div class="menga_menu_group *:font-[600] *:text-[0.812rem] *:leading-[1.5 *:uppercase] flex flex-col gap-[12px]">
                                         <a href="javascript:void(0)" class="text-color11">MOST RECOMMENDED</a>
                                         <a href="javascript:void(0)" class="text-color11">ON SALE</a>
