--- a/checkout-payment-step.html
+++ b/checkout-payment-step.html
@@ -28,7 +28,7 @@
                                 <li class="group done">
                                     <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Shipping</a>
                                 </li>
-                                <li class="group done">
+                                <li class="group">
                                     <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Payment</a>
                                 </li>
                             </ul>
@@ -64,46 +64,75 @@
                                         <a href="javascript:void(0)" class="text-[#1F3650] text-[12px] font-[700] leading-[1.3] tracking-[1px]">Change</a>
                                     </div>
                                 </div>
+                                <div class="devider h-[1px] w-full bg-[#CCCBC8]"></div>
+                                <div class="ship_method flex justify-between">
+                                    <div class="text_part flex">
+                                        <span class="text-[#666562] tracking-[1px] w-[70px]">Method</span>
+                                        <span class="text-[#000000] tracking-[1px]">Same Day Delivery</span>
+                                    </div>
+                                    <div class="change_btn">
+                                        <a href="javascript:void(0)" class="text-[#1F3650] text-[12px] font-[700] leading-[1.3] tracking-[1px]">Change</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="shipping_method mt-[34px]">
-                            <h2 class="title text-[1.125rem] text-[#1F3650] font-[700] leading-[1.5] tracking-[1px] mb-[14px]">Shipping method</h2>
-                            <div class="shipping_method_wraper border-[1px] border-[#CCCBC8] rounded-[8px] bg-[#fff]">
-                                <div class="standerd_shipping flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
-                                    <input type="radio" name="shipping_method" id="standerd_shipping" class="custom-radio">
-                                    <label for="standerd_shipping" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
-                                        <div>
-                                            <div class="font-[700] text-[#020306] tracking-[-0.2px]">Standerd Shipping</div>
-                                            <div class="font-[300] text-[#666562] tracking-[-0.2px]">4 to 6 business days</div>
-                                        </div>
-                                        <div class="standerd_shipping_ammount text-[#1F3650] font-[700] tracking-[1px]">£10.00</div>
+                        <div class="payment_info mt-[34px]">
+                            <div class="title_with_text mb-[14px]">
+                                <h2 class="title text-[1.125rem] text-[#1F3650] font-[700] leading-[1.5] tracking-[1px]">Payment</h2>
+                                <p class="text-[#666562] tracking-[1px]">All transactions are secure and encrypted.</p>
+                            </div>
+                            <div class="payment_process_wraper border-[1px] border-[#CCCBC8] rounded-[8px]">
+                                <div class="payment_cradit_card_wraper">
+                                    <div class="payment_cradit_card flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
+                                        <input type="radio" name="billing_address" id="payment_cradit_card" class="custom-radio">
+                                        <label for="payment_cradit_card" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                            <div class="font-[700] text-[#1F3650] tracking-[1px]">Credit card</div>
+                                        </label>
+                                    </div>
+
+                                </div>
+                                <div class="payment_paypal flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
+                                    <input type="radio" name="billing_address" id="payment_paypal" class="custom-radio">
+                                    <label for="payment_paypal" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                        <img src="./assets/images/paypal.png" alt="paypla">
                                     </label>
                                 </div>
-                                <div class="express_delivery flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
-                                    <input type="radio" name="shipping_method" id="express_delivery" class="custom-radio">
-                                    <label for="express_delivery" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
-                                        <div>
-                                            <div class="font-[700] text-[#020306] tracking-[-0.2px]">Express Delivery</div>
-                                            <div class="font-[300] text-[#666562] tracking-[-0.2px]">1 to 2 business days</div>
-                                        </div>
-                                        <div class="express_delivery_ammount text-[#1F3650] font-[700] tracking-[1px]">£15.00</div>
-                                    </label>
-                                </div>
-                                <div class="same_day_delivery flex gap-[14px] p-[17px]">
-                                    <input type="radio" name="shipping_method" id="same_day_delivery" class="custom-radio">
-                                    <label for="same_day_delivery" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
-                                        <div>
-                                            <div class="font-[700] text-[#020306] tracking-[-0.2px]">Same Day Delivery</div>
-                                        </div>
-                                        <div class="same_day_delivery_ammount text-[#1F3650] font-[700] tracking-[1px]">£20.00</div>
+                                <div class="payment_paypal flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
+                                    <input type="radio" name="billing_address" id="payment_paypal" class="custom-radio">
+                                    <label for="payment_paypal" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                        <img src="./assets/images/paypal.png" alt="paypla">
                                     </label>
                                 </div>
                             </div>
+                        </div>
+                        <div class="billing_address mt-[34px]">
+                            <div class="title_with_text mb-[14px]">
+                                <h2 class="title text-[1.125rem] text-[#1F3650] font-[700] leading-[1.5] tracking-[1px]">Shipping method</h2>
+                                <p class="text-[#666562] tracking-[1px]">Select the address that matches your card of payment method.</p>
+                            </div>
+                            <div class="billing_address_wraper border-[1px] border-[#CCCBC8] rounded-[8px] bg-[#fff]">
+                                <div class="same_as_shipping_address flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
+                                    <input type="radio" name="billing_address" id="same_as_shipping_address" class="custom-radio">
+                                    <label for="same_as_shipping_address" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                        <div class="font-[700] text-[#666562] tracking-[1px]"> Same as shipping address </div>
+                                    </label>
+                                </div>
+                                <div class="different_shipping_address flex gap-[14px] p-[17px]">
+                                    <input type="radio" name="billing_address" id="different_shipping_address" class="custom-radio">
+                                    <label for="different_shipping_address" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                        <div class="font-[700] text-[#666562] tracking-[1px]"> Use a different billing address </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="save_information flex gap-[8px] items-center p-[17px] border-[1px] border-[#CCCBC8] rounded-[5px] mt-[34px]">
+                            <input type="checkbox" name="save_information" id="save_information" class="custom-checkbox gray_border">
+                            <label for="save_information" class="text-[#666562] cursor-pointer">Save this information for next time</label>
                         </div>
                         <div class="return_shipping mt-[34px]">
                             <div class="btn_wrapper flex justify-between items-center">
                                 <a href="javascript:void(0)" class="px-[24px] pl-[0] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase text-[#1F3650]">Return to cart</a>
-                                <a href="./checkout-payment-step.html" class="px-[24px] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase bg-[#1F3650] text-[#FFFFFD]">continue to shipping</a>
+                                <a href="javascript:void(0)" class="px-[24px] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase bg-[#1F3650] text-[#FFFFFD]">continue to shipping</a>
                             </div>
                         </div>
                         <div class="footer-part mt-[98px]">
