product details done

--- a/checkout-payment-step.html
+++ b/checkout-payment-step.html
@@ -97,9 +97,9 @@
                                         <img src="./assets/images/paypal.png" alt="paypla">
                                     </label>
                                 </div>
-                                <div class="payment_paypal flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
-                                    <input type="radio" name="billing_address" id="payment_paypal" class="custom-radio">
-                                    <label for="payment_paypal" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                <div class="payment_affirm flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
+                                    <input type="radio" name="billing_address" id="payment_affirm" class="custom-radio">
+                                    <label for="payment_affirm" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
                                         <img src="./assets/images/paypal.png" alt="paypla">
                                     </label>
                                 </div>
