--- a/product-details.html
+++ b/product-details.html
@@ -170,6 +170,32 @@
                         <div class="price-wraper mt-[15px]">
                             <span class="price font-[600] text-[1rem] leading-[1.5] text-[#AA7E6F] tracking-[1.5px]"><del class="font-[400] text-[#A3A3A0]">$£6,495.00</del> £5,495.00</span>
                         </div>
+                        <div class="color-wraper mt-[15px]">
+                            <div class="title text-[#1F3650] font-[700] text-[12px] leading-[1px] tracking-[1px] uppercase">Color</div>
+                            <div class="color-name my-3 text-[#666562] font-[300] text-[12px] leading-[1.5] tracking-[1px]">Black — Organic Terry</div>
+                            <div class="colors flex gap-[10px]">
+                                <input type="radio" name="color" id="color1" class="custom-radio-two bg-[#AF9484]">
+                                <input type="radio" name="color" id="color2" class="custom-radio-two bg-[#FBECCF]">
+                                <input type="radio" name="color" id="color3" class="custom-radio-two bg-[#E8E6DE]">
+                            </div>
+                        </div>
+                        <div class="size_wraper mt-[15px]">
+                            <div class="title text-[#1F3650] font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase">Size</div>
+                            <div class="sizes flex gap-[12px]">
+                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                    <input type="radio" name="size" id="xs" class="hidden peer">
+                                    <label for="xs" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">XS</label>
+                                </div>
+                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                    <input type="radio" name="size" id="s" class="hidden peer">
+                                    <label for="s" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">S</label>
+                                </div>
+                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                    <input type="radio" name="size" id="M" class="hidden peer">
+                                    <label for="M" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">M</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="add-to-cart-btn-wraper flex gap-[10px] items-center my-[44px]">
                         <div class="add-to-whislist">
