--- a/checkout-order-status.html
+++ b/checkout-order-status.html
@@ -16,22 +16,23 @@
             <div class="information_main_wraper flex gap-[45px]">
                 <div class="left_part max-w-[808px] flex-1 pt-[56px] pb-[36px]">
                     <div class="information_part max-w-[572px] ml-auto">
-                        <h1 class="main_title text-[#1F3650] text-[4rem] leading-[1.125] tracking-[1px] text-center">Best of British</h1>
-                        <div class="bradecrumb">
-                            <ul class="flex items-center flex justify-center gap-[9px]">
-                                <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Cart</a>
-                                </li>
-                                <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Information</a>
-                                </li>
-                                <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Shipping</a>
-                                </li>
-                                <li class="group">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Payment</a>
-                                </li>
-                            </ul>
+                        <h1 class="main_title text-[#1F3650] text-[4rem] leading-[1.125] tracking-[1px]">Best of British</h1>
+                        <div class="order_confirmetion flex gap-[12px] items-center my-[20px]">
+                            <div class="icon h-[50px] w-[50px] border-[2px] border-[#1F3650] rounded-full flex justify-center items-center text-[20px] shrink-0">
+                                <i class="fa fa-check"></i>
+                            </div>
+                            <div class="text">
+                                <p class="text-[#666562] tracking-[1px]">Confirmation <span>#DQFDHG5E0</span></p>
+                                <p class="text-[#1F3650] text-[1.125rem] leading-[1.5] font-[700] tracking-[1px]">Thank you John Smith!</p>
+                            </div>
+                        </div>
+                        <div class="order_placed_massage border-[1px] border-[#CCCBC8] rounded-[5px]">
+                            <div class="map">
+                                <iframe width="100%" height="200" src="https://www.openstreetmap.org/export/embed.html?bbox=26.053079366683964%2C44.40786065575857%2C26.0620379447937%2C44.41114093994929&amp;layer=mapnik"></iframe>
+                            </div>
+                            <div class="text_part">
+                                .
+                            </div>
                         </div>
                         <div class="shipping_info mt-[34px]">
                             <div class="shhiping_info_wraper border-[1px] border-[#CCCBC8] rounded-[5px] px-[16px] py-[12px] flex flex-col gap-[12px]">
