payment checkout procedure

--- a/checkout-order-status.html
+++ b/checkout-order-status.html
@@ -30,8 +30,37 @@
                             <div class="map">
                                 <iframe width="100%" height="200" src="https://www.openstreetmap.org/export/embed.html?bbox=26.053079366683964%2C44.40786065575857%2C26.0620379447937%2C44.41114093994929&amp;layer=mapnik"></iframe>
                             </div>
-                            <div class="text_part">
-                                .
+                            <div class="text_par p-[14px]">
+                                <h3 class="font-[700] text-[#1F3650] text-[1.125rem] tracking-[1px]">Your order is placed</h3>
+                                <p class="text-[#666562] tracking-[1px] my-[8px]">Your order #212423 was placed with success. You will receive the status of the order via email.</p>
+                                <div class="btn_wraper">
+                                    <a href="javascript:void(0)" class="text-[#1F3650] leading-[1.5] tracking-[1px] uppercase px-[17px] py-[14px] rounded-[5px] border-[1px] border-[#CCCBC8]">View order history</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="customer_information border-[1px] border-[#CCCBC8] rounded-[5px] mt-[34px]">
+                            <div class="customer_information_inner p-[14px]">
+                                <div class="title text-[#1F3650] text-[1.125rem] tracking-[1px]">Customer information</div>
+                                <div class="info_wraper mt-[10px] grid grid-cols-2">
+                                    <div class="contact_info">
+                                        <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Contact information</div>
+                                        <div class="value flex flex-col gap-[10px]">
+                                            <p class="text-[#666562] tracking-[1px]">name@example.com</p>
+                                        </div>
+                                    </div>
+                                    <div class="payment_info">
+                                        <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Payment method</div>
+                                        <div class="value flex flex-col gap-[10px]">
+                                            <p class="text-[#666562] tracking-[1px] flex gap-[5px]"><span><img src="./assets/images/PaymentIcon.png" alt="card"></span><span>ending with 4242 - £336.80</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="payment_info">
+                                        <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Payment method</div>
+                                        <div class="value flex flex-col gap-[10px]">
+                                            <p class="text-[#666562] tracking-[1px] flex gap-[5px]"><span><img src="./assets/images/PaymentIcon.png" alt="card"></span><span>ending with 4242 - £336.80</span></p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="shipping_info mt-[34px]">
