buyer booking confirmation done

--- a/buyer-about-reviews.html
+++ b/buyer-about-reviews.html
@@ -223,9 +223,9 @@
                 </div>
                 <div class="right_part_wraper flex-1 max-w-[850px]">
                     <div class="buyer_option_links flex gap-[32px]">
-                        <a href="buyer-about.html" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] uppercase text-color5">store profile</a>
-                        <a href="javascript:void(0)" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] uppercase">Items</a>
-                        <a href="buyer-about-reviews.html" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] uppercase">Reviews</a>
+                        <a href="buyer-about.html" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] uppercase">store profile</a>
+                        <a href="./buyer-shop-grid.html" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] uppercase">Items</a>
+                        <a href="buyer-about-reviews.html" class="font-[600] text-[13px] text-[#8F9BA7] leading-[19px] tracking-[1.5px] text-color5 uppercase">Reviews</a>
                     </div>
                     <div class="buyer_about_details mt-[34px]">
                         <div class="name dm-serif text-[2rem] text-[#272833] tracking-[-0.4px] leading-[1]">ROLEX SA</div>
