--- a/checkout-payment-step.html
+++ b/checkout-payment-step.html
@@ -153,7 +153,7 @@
                         <div class="return_shipping mt-[34px]">
                             <div class="btn_wrapper flex justify-between items-center">
                                 <a href="javascript:void(0)" class="px-[24px] pl-[0] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase text-[#1F3650]">Return to cart</a>
-                                <a href="javascript:void(0)" class="px-[24px] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase bg-[#1F3650] text-[#FFFFFD]">continue to shipping</a>
+                                <a href="buyer-order-processing.html" class="px-[24px] py-[12px] text-[14px] leading-[2] tracking-[1.5px] uppercase bg-[#1F3650] text-[#FFFFFD]">Pay Now</a>
                             </div>
                         </div>
                         <div class="footer-part mt-[98px]">
